--- a/Klinik.Features/Klinik.Features.csproj
+++ b/Klinik.Features/Klinik.Features.csproj
@@ -96,6 +96,7 @@
     <Compile Include="DeliveryOrder\DeliveryOrderRequest.cs" />
     <Compile Include="DeliveryOrder\DeliveryOrderResponse.cs" />
     <Compile Include="DeliveryOrder\DeliveryOrderValidator.cs" />
+    <Compile Include="General\GeneralHandler.cs" />
     <Compile Include="MasterData\Gudang\GudangHandler.cs" />
     <Compile Include="MasterData\Gudang\GudangRequest.cs" />
     <Compile Include="MasterData\Gudang\GudangResponse.cs" />
