Purchase Request dan request detail

--- a/Klinik.Entities/Klinik.Entities.csproj
+++ b/Klinik.Entities/Klinik.Entities.csproj
@@ -132,6 +132,8 @@
     <Compile Include="PurchaseOrderPusatDetail\PurchaseOrderPusatDetailModel.cs" />
     <Compile Include="PurchaseOrderPusat\PurchaseOrderPusatModel.cs" />
     <Compile Include="PurchaseOrder\PurchaseOrderModel.cs" />
+    <Compile Include="PurchaseRequestDetail\PurchaseRequestDetailModel.cs" />
+    <Compile Include="PurchaseRequest\PurchaseRequestModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Klinik.Data\Klinik.Data.csproj">
