--- a/Klinik.Entities/Klinik.Entities.csproj
+++ b/Klinik.Entities/Klinik.Entities.csproj
@@ -133,6 +133,8 @@
     <Compile Include="PurchaseOrderPusat\PurchaseOrderPusatModel.cs" />
     <Compile Include="PurchaseOrder\PurchaseOrderModel.cs" />
     <Compile Include="PurchaseRequestDetail\PurchaseRequestDetailModel.cs" />
+    <Compile Include="PurchaseRequestPusatDetail\PurchaseRequestPusatDetailModel.cs" />
+    <Compile Include="PurchaseRequestPusat\PurchaseRequestPusatModel.cs" />
     <Compile Include="PurchaseRequest\PurchaseRequestModel.cs" />
   </ItemGroup>
   <ItemGroup>
