--- a/Klinik.Web/Klinik.Web.csproj
+++ b/Klinik.Web/Klinik.Web.csproj
@@ -239,6 +239,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\DeliveryOrderController.cs" />
     <Compile Include="Controllers\DeliveryOrderPusatController.cs" />
+    <Compile Include="Controllers\GeneralController.cs" />
     <Compile Include="Controllers\PharmacyController.cs" />
     <Compile Include="Controllers\LabController.cs" />
     <Compile Include="Controllers\CashierController.cs" />
@@ -1149,6 +1150,7 @@
     <Content Include="Content\toastr.css" />
     <Content Include="Content\toastr.min.css" />
     <Content Include="js\Custom.js" />
+    <Content Include="js\General.js" />
     <Content Include="js\PurchaseReqestPusat.js" />
     <Content Include="js\PurchaseRequest.js" />
     <Content Include="js\PurchaseOrderPusat.js" />
@@ -1530,6 +1532,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\General\" />
     <Folder Include="Views\Vendor\" />
   </ItemGroup>
   <ItemGroup>
