--- a/Klinik.Data/Klinik.Data.csproj
+++ b/Klinik.Data/Klinik.Data.csproj
@@ -296,6 +296,7 @@
       <LastGenOutput>KlinikModel.cs</LastGenOutput>
     </Content>
     <Content Include="DB\19 agustus 2019.sql" />
+    <Content Include="DB\20 agustus 2019.sql" />
     <Content Include="DB\DBKlinikDev_20190817.sql" />
     <Content Include="DB\MandeKlinik16-08-2019.sql" />
   </ItemGroup>
