--- a/Klinik.Web/Klinik.Web.csproj
+++ b/Klinik.Web/Klinik.Web.csproj
@@ -347,6 +347,7 @@
     <Content Include="Content\Custom\jquery-ui.min.js" />
     <Content Include="Content\font-awesome.css" />
     <Content Include="Content\font-awesome.min.css" />
+    <Content Include="Content\images\bg-login-m.jpg" />
     <Content Include="Content\images\bg-login.jpg" />
     <Content Include="Content\images\favicon-login.ico" />
     <Content Include="Content\images\favicon.ico" />
