--- a/Klinik.Web/Klinik.Web.csproj
+++ b/Klinik.Web/Klinik.Web.csproj
@@ -1530,6 +1530,8 @@
     <Content Include="Views\PurchaseRequestPusat\PurchaseRequestPusatList.cshtml" />
     <Content Include="Views\PurchaseRequestPusat\CreateOrEditPurchaseRequestPusat.cshtml" />
     <Content Include="Views\PurchaseRequestPusat\PrintPurchaseRequestPusat.cshtml" />
+    <Content Include="Views\MasterData\ProductInGudangList.cshtml" />
+    <Content Include="Views\MasterData\CreateOrEditProductInGudang.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
