--- a/Klinik.Web/Web.Release.config
+++ b/Klinik.Web/Web.Release.config
@@ -3,9 +3,9 @@
 <!-- For more information on using Web.config transformation visit http://go.microsoft.com/fwlink/?LinkId=301874 -->
 
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
-  <connectionStrings>
+  <!--<connectionStrings>
     <add name="KlinikDBEntities" connectionString="metadata=res://*/DataRepository.KlinikModel.csdl|res://*/DataRepository.KlinikModel.ssdl|res://*/DataRepository.KlinikModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=klinikdb.database.windows.net;initial catalog=KlinikDBDev;user id=AdminDB;password=Admin2019;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
-  </connectionStrings>
+  </connectionStrings>-->
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
   </system.web>
