--- a/Klinik.Web/Klinik.Web.csproj
+++ b/Klinik.Web/Klinik.Web.csproj
@@ -1529,6 +1529,8 @@
     <Content Include="Views\PurchaseRequestPusat\PurchaseRequestPusatList.cshtml" />
     <Content Include="Views\PurchaseRequestPusat\CreateOrEditPurchaseRequestPusat.cshtml" />
     <Content Include="Views\PurchaseRequestPusat\PrintPurchaseRequestPusat.cshtml" />
+    <Content Include="Views\Pharmacy\PengambilanObat.cshtml" />
+    <Content Include="Views\Pharmacy\ListAllGivenMedicine.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
