--- a/Klinik.Web/Klinik.Web.csproj
+++ b/Klinik.Web/Klinik.Web.csproj
@@ -258,6 +258,7 @@
     <Compile Include="Controllers\PreExamineController.cs" />
     <Compile Include="Controllers\PurchaseOrderController.cs" />
     <Compile Include="Controllers\PurchaseOrderPusatController.cs" />
+    <Compile Include="Controllers\PurchaseRequestConfigController.cs" />
     <Compile Include="Controllers\PurchaseRequestController.cs" />
     <Compile Include="Controllers\PurchaseRequestPusatController.cs" />
     <Compile Include="Controllers\RadiologiController.cs" />
@@ -1531,17 +1532,15 @@
     <Content Include="Views\PurchaseRequestPusat\PurchaseRequestPusatList.cshtml" />
     <Content Include="Views\PurchaseRequestPusat\CreateOrEditPurchaseRequestPusat.cshtml" />
     <Content Include="Views\PurchaseRequestPusat\PrintPurchaseRequestPusat.cshtml" />
-
     <Content Include="Views\MasterData\ProductInGudangList.cshtml" />
     <Content Include="Views\MasterData\CreateOrEditProductInGudang.cshtml" />
-
     <Content Include="Views\Pharmacy\PengambilanObat.cshtml" />
     <Content Include="Views\Pharmacy\ListAllGivenMedicine.cshtml" />
-
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Views\General\" />
+    <Folder Include="Views\PurchaseRequestConfig\" />
     <Folder Include="Views\Vendor\" />
   </ItemGroup>
   <ItemGroup>
