--- a/Klinik.Web/packages.config
+++ b/Klinik.Web/packages.config
@@ -47,6 +47,8 @@
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
   <package id="toastr" version="2.1.1" targetFramework="net461" />
+  <package id="Twitter.Typeahead" version="0.11.1" targetFramework="net461" />
+  <package id="typeahead.js-bootstrap.css" version="0.0.4" targetFramework="net461" />
   <package id="Unity" version="5.0.1" targetFramework="net461" />
   <package id="Unity.Abstractions" version="4.0.2" targetFramework="net461" />
   <package id="Unity.Container" version="5.9.3" targetFramework="net461" />
