--- a/Klinik.Web/Klinik.Web.csproj
+++ b/Klinik.Web/Klinik.Web.csproj
@@ -240,6 +240,7 @@
     <Compile Include="Controllers\DeliveryOrderController.cs" />
     <Compile Include="Controllers\DeliveryOrderPusatController.cs" />
     <Compile Include="Controllers\GeneralController.cs" />
+    <Compile Include="Controllers\GudangPusatController.cs" />
     <Compile Include="Controllers\PharmacyController.cs" />
     <Compile Include="Controllers\LabController.cs" />
     <Compile Include="Controllers\CashierController.cs" />
@@ -1155,6 +1156,7 @@
     <Content Include="Content\typeahead.css" />
     <Content Include="js\Custom.js" />
     <Content Include="js\General.js" />
+    <Content Include="js\GudangPusat.js" />
     <Content Include="js\PurchaseReqestPusat.js" />
     <Content Include="js\PurchaseRequest.js" />
     <Content Include="js\PurchaseOrderPusat.js" />
@@ -1544,10 +1546,10 @@
     <Content Include="Views\Pharmacy\PengambilanObat.cshtml" />
     <Content Include="Views\Pharmacy\ListAllGivenMedicine.cshtml" />
     <Content Include="Views\Shared\_Layout_1.cshtml" />
-
     <Content Include="Views\PurchaseRequestConfig\PurchaseRequestConfigList.cshtml" />
     <Content Include="Views\PurchaseRequestConfig\CreateOrEditPurchaseRequestConfig.cshtml" />
-
+    <Content Include="Views\GudangPusat\PurchaseRequestList.cshtml" />
+    <Content Include="Views\GudangPusat\CreateOrEditPurchaseRequest.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
