--- a/Klinik.Features/Klinik.Features.csproj
+++ b/Klinik.Features/Klinik.Features.csproj
@@ -99,9 +99,13 @@
     <Compile Include="DeliveryOrder\DeliveryOrderResponse.cs" />
     <Compile Include="DeliveryOrder\DeliveryOrderValidator.cs" />
     <Compile Include="General\GeneralHandler.cs" />
+    <Compile Include="HistoryMedical\MedicalHistoryHandler.cs" />
+    <Compile Include="HistoryMedical\MedicalHistoryRequest.cs" />
+    <Compile Include="HistoryMedical\MedicalHistoryResponse.cs" />
     <Compile Include="HistoryProductInGudang\HistoryProductInGudangHandler.cs" />
     <Compile Include="HistoryProductInGudang\HistoryProductInGudangRequest.cs" />
     <Compile Include="HistoryProductInGudang\HistoryProductInGudangResponse.cs" />
+    <Compile Include="ICDThemeFeatures\ICDThemeHandler.cs" />
     <Compile Include="MasterData\Gudang\GudangHandler.cs" />
     <Compile Include="MasterData\Gudang\GudangRequest.cs" />
     <Compile Include="MasterData\Gudang\GudangResponse.cs" />
@@ -235,10 +239,12 @@
     <Compile Include="PreExamine\PreExamineRequest.cs" />
     <Compile Include="PreExamine\PreExamineResponse.cs" />
     <Compile Include="PreExamine\PreExamineValidator.cs" />
+    <Compile Include="ProductCategory\ProductCategoryHandler.cs" />
     <Compile Include="ProductInGudang\ProductInGudangHandler.cs" />
     <Compile Include="ProductInGudang\ProductInGudangRequest.cs" />
     <Compile Include="ProductInGudang\ProductInGudangResponse.cs" />
     <Compile Include="ProductInGudang\ProductInGudangValidator.cs" />
+    <Compile Include="ProductUnitFeatures\ProductUnitHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PurchaseOrderDetail\PurchaseOrderDetailHandler.cs" />
     <Compile Include="PurchaseOrderDetail\PurchaseOrderDetailRequest.cs" />
