--- a/Klinik.Data/Klinik.Data.csproj
+++ b/Klinik.Data/Klinik.Data.csproj
@@ -155,6 +155,9 @@
     <Compile Include="DataRepository\Log.cs">
       <DependentUpon>KlinikModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="DataRepository\LookupCategory.cs">
+      <DependentUpon>KlinikModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="DataRepository\MCUPackage.cs">
       <DependentUpon>KlinikModel.tt</DependentUpon>
     </Compile>
@@ -302,6 +305,7 @@
     <Content Include="DB\20 agustus 2019.sql" />
     <Content Include="DB\28 agustus 2019.sql" />
     <Content Include="DB\DBKlinikDev_20190817.sql" />
+    <Content Include="DB\AddLookupTable_10-9-2019.sql" />
     <Content Include="DB\MandeKlinik16-08-2019.sql" />
   </ItemGroup>
   <ItemGroup>
