--- a/Klinik.Web/Klinik.Web.csproj
+++ b/Klinik.Web/Klinik.Web.csproj
@@ -1158,6 +1158,7 @@
     <Content Include="Content\typeahead.css" />
     <Content Include="js\Custom.js" />
     <Content Include="js\General.js" />
+    <Content Include="js\GudangPusatPurchaseOrder.js" />
     <Content Include="js\GudangPusat.js" />
     <Content Include="js\PurchaseReqestPusat.js" />
     <Content Include="js\PurchaseRequest.js" />
@@ -1558,6 +1559,9 @@
     <Content Include="Views\Reports\Top10Dieases.cshtml" />
     <Content Include="Views\Reports\Top10Referals.cshtml" />
     <Content Include="Views\GudangPusat\PurchaseOrderList.cshtml" />
+    <Content Include="Views\GudangPusat\CreateOrEditPurchaseOrder.cshtml" />
+    <Content Include="Views\GudangPusat\PrintPurchaseRequestPusat.cshtml" />
+    <Content Include="Views\GudangPusat\PrintPurchaseOrderPusat.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
