--- a/Klinik.Web/Klinik.Web.csproj
+++ b/Klinik.Web/Klinik.Web.csproj
@@ -240,11 +240,8 @@
     <Compile Include="Controllers\DeliveryOrderController.cs" />
     <Compile Include="Controllers\DeliveryOrderPusatController.cs" />
     <Compile Include="Controllers\GeneralController.cs" />
-
     <Compile Include="Controllers\MedicalHistoryController.cs" />
-
     <Compile Include="Controllers\GudangPusatController.cs" />
-
     <Compile Include="Controllers\PharmacyController.cs" />
     <Compile Include="Controllers\LabController.cs" />
     <Compile Include="Controllers\CashierController.cs" />
@@ -1553,15 +1550,15 @@
     <Content Include="Views\Shared\_Layout_1.cshtml" />
     <Content Include="Views\PurchaseRequestConfig\PurchaseRequestConfigList.cshtml" />
     <Content Include="Views\PurchaseRequestConfig\CreateOrEditPurchaseRequestConfig.cshtml" />
-
     <Content Include="Views\MedicalHistory\ViewEmployeeData.cshtml" />
     <Content Include="Views\MedicalHistory\ViewEmployeeFamilyData.cshtml" />
-
     <Content Include="Views\GudangPusat\PurchaseRequestList.cshtml" />
     <Content Include="Views\GudangPusat\CreateOrEditPurchaseRequest.cshtml" />
     <Content Include="Views\Reports\Index.cshtml" />
     <Content Include="Views\Reports\Top10Dieases.cshtml" />
     <Content Include="Views\Reports\Top10Referals.cshtml" />
+    <Content Include="Views\MasterData\LookUpCategoryList.cshtml" />
+    <Content Include="Views\MasterData\CreateOrEditLookUpCategory.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
