--- a/Klinik.Web/Klinik.Web.csproj
+++ b/Klinik.Web/Klinik.Web.csproj
@@ -237,14 +237,12 @@
     <Compile Include="App_Start\UnityMvcActivator.cs" />
     <Compile Include="Base\BaseController.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\AppointmentController.cs" />
     <Compile Include="Controllers\DeliveryOrderController.cs" />
     <Compile Include="Controllers\DeliveryOrderPusatController.cs" />
     <Compile Include="Controllers\GeneralController.cs" />
-
     <Compile Include="Controllers\MedicalHistoryController.cs" />
-
     <Compile Include="Controllers\GudangPusatController.cs" />
-
     <Compile Include="Controllers\PharmacyController.cs" />
     <Compile Include="Controllers\LabController.cs" />
     <Compile Include="Controllers\CashierController.cs" />
@@ -1552,13 +1550,12 @@
     <Content Include="Views\Shared\_Layout_1.cshtml" />
     <Content Include="Views\PurchaseRequestConfig\PurchaseRequestConfigList.cshtml" />
     <Content Include="Views\PurchaseRequestConfig\CreateOrEditPurchaseRequestConfig.cshtml" />
-
     <Content Include="Views\MedicalHistory\ViewEmployeeData.cshtml" />
     <Content Include="Views\MedicalHistory\ViewEmployeeFamilyData.cshtml" />
-
     <Content Include="Views\GudangPusat\PurchaseRequestList.cshtml" />
     <Content Include="Views\GudangPusat\CreateOrEditPurchaseRequest.cshtml" />
-
+    <Content Include="Views\Appointment\MakeAppointment.cshtml" />
+    <Content Include="Views\Partials\_DetailAppointment.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
