--- a/Klinik.Common/Klinik.Common.csproj
+++ b/Klinik.Common/Klinik.Common.csproj
@@ -98,6 +98,10 @@
     <Compile Include="PurchaseOrderPusatDetailMode.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Klinik.Data\Klinik.Data.csproj">
+      <Project>{65643f8a-3935-4a27-aaf3-307dcbf8db60}</Project>
+      <Name>Klinik.Data</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Klinik.Entities\Klinik.Entities.csproj">
       <Project>{0a81b9b4-7d64-412d-8e86-8ae9d22cf53f}</Project>
       <Name>Klinik.Entities</Name>
@@ -105,10 +109,6 @@
     <ProjectReference Include="..\Klinik.Resources\Klinik.Resources.csproj">
       <Project>{3D1A8222-CC25-4BB0-8820-F26C53AA9E8D}</Project>
       <Name>Klinik.Resources</Name>
-    </ProjectReference>
-    <ProjectReference Include="C:\Users\Aditya\Downloads\Klinik-development_1\Klinik.Data\Klinik.Data.csproj">
-      <Project>{53291442-9A4C-4416-8871-8C94D7636404}</Project>
-      <Name>Klinik.Data</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
