--- a/Klinik.Web/Klinik.Web.csproj
+++ b/Klinik.Web/Klinik.Web.csproj
@@ -1591,6 +1591,10 @@
       <Project>{e5c9d610-f530-4d0e-8d9e-2a729ccbff23}</Project>
       <Name>Klinik.Common</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Klinik.Data\Klinik.Data.csproj">
+      <Project>{65643F8A-3935-4A27-AAF3-307DCBF8DB60}</Project>
+      <Name>Klinik.Data</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Klinik.Entities\Klinik.Entities.csproj">
       <Project>{0a81b9b4-7d64-412d-8e86-8ae9d22cf53f}</Project>
       <Name>Klinik.Entities</Name>
@@ -1602,10 +1606,6 @@
     <ProjectReference Include="..\Klinik.Resources\Klinik.Resources.csproj">
       <Project>{3d1a8222-cc25-4bb0-8820-f26c53aa9e8d}</Project>
       <Name>Klinik.Resources</Name>
-    </ProjectReference>
-    <ProjectReference Include="C:\Users\Aditya\Downloads\Klinik-development_1\Klinik.Data\Klinik.Data.csproj">
-      <Project>{53291442-9A4C-4416-8871-8C94D7636404}</Project>
-      <Name>Klinik.Data</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
