--- a/Klinik.Data/Klinik.Data.csproj
+++ b/Klinik.Data/Klinik.Data.csproj
@@ -188,6 +188,9 @@
     <Compile Include="DataRepository\Patient.cs">
       <DependentUpon>KlinikModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="DataRepository\PatientAge.cs">
+      <DependentUpon>KlinikModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="DataRepository\PatientClinic.cs">
       <DependentUpon>KlinikModel.tt</DependentUpon>
     </Compile>
@@ -310,7 +313,11 @@
     <Content Include="DB\DBKlinikDev_20190817.sql" />
     <Content Include="DB\DBKlinik_GenScripts_20190909.sql" />
     <Content Include="DB\AddLookupTable_10-9-2019.sql" />
+    <Content Include="DB\ZainalArifinKlinik15-09-2019.sql" />
+    <Content Include="DB\ZainalA_15092019_ClassifyAge.sql" />
+    <Content Include="DB\ZainalA_15092019_GetAge.sql" />
     <Content Include="DB\MandeKlinik16-08-2019.sql" />
+    <Content Include="DB\ZainalA_15092019_InsertPatientAge.sql" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
