--- a/Klinik.Web/packages.config
+++ b/Klinik.Web/packages.config
@@ -6,6 +6,7 @@
   <package id="CommonServiceLocator" version="1.3" targetFramework="net461" />
   <package id="Datalist" version="6.2.1" targetFramework="net461" />
   <package id="Datalist.Core" version="6.2.1" targetFramework="net461" />
+  <package id="DotNet.Highcharts" version="4.0" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
   <package id="EPPlus" version="4.5.3.2" targetFramework="net461" />
   <package id="FontAwesome" version="4.7.0" targetFramework="net461" />
