--- a/Klinik.Data/Klinik.Data.csproj
+++ b/Klinik.Data/Klinik.Data.csproj
@@ -329,6 +329,8 @@
     <Content Include="DB\DB_Klinik_PRD_2019-09-12.sql" />
     <Content Include="DB\MandeKlinik16-08-2019.sql" />
     <Content Include="DB\ZainalA_15092019_InsertPatientAge.sql" />
+    <Content Include="DB\ZainalA_20092019_Top10DiseaseReport_SP.sql" />
+    <Content Include="DB\ZainalA_20092019_Top10ReferalReport_SP.sql" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
