Update Models, Update Reports Handler add Dapper to retrive report data

--- a/Klinik.Common/Klinik.Common.csproj
+++ b/Klinik.Common/Klinik.Common.csproj
@@ -80,6 +80,7 @@
   <ItemGroup>
     <Compile Include="AutomapperProfile.cs" />
     <Compile Include="CommonUtils.cs" />
+    <Compile Include="ConnectionStrings.cs" />
     <Compile Include="Constants.cs" />
     <Compile Include="CustomAuthorizeAttribute.cs" />
     <Compile Include="Enumerations\CallStatusEnum.cs" />
