--- a/Klinik.Web/Web.config
+++ b/Klinik.Web/Web.config
@@ -9,9 +9,8 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="KlinikDBEntities" connectionString="metadata=res://*/DataRepository.KlinikModel.csdl|res://*/DataRepository.KlinikModel.ssdl|res://*/DataRepository.KlinikModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=klinikdbuat.database.windows.net;initial catalog=KlinikDB;user id=AdminDB;password=Admin2019;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <!--<add name="KlinikDBEntities1" connectionString="metadata=res://*/DataRepository.KlinikModel.csdl|res://*/DataRepository.KlinikModel.ssdl|res://*/DataRepository.KlinikModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=klinikdbuat.database.windows.net;initial catalog=KlinikDB;user id=AdminDB;password=Admin2019;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-
+    <add name="KlinikDBEntities" connectionString="metadata=res://*/DataRepository.KlinikModel.csdl|res://*/DataRepository.KlinikModel.ssdl|res://*/DataRepository.KlinikModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MTNB488\SQLSVR2014;initial catalog=KlinikDB;user id=sa;password=Green123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name ="ReportConnection" connectionString="data source=MTNB488\SQLSVR2014;initial catalog=KlinikDB;persist security info=True;user id=sa;password=Green123;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <appSettings>
     <add key="SmtpSender" value="verifikasi.klinik@gmail.com" />
