--- a/Klinik.Common/Klinik.Common.csproj
+++ b/Klinik.Common/Klinik.Common.csproj
@@ -95,6 +95,14 @@
     <Compile Include="Enumerations\RegistrationTypeEnum.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="OrganizationData.cs" />
+    <Compile Include="Paging\IPagedList.cs" />
+    <Compile Include="Paging\PagedList.cs" />
+    <Compile Include="Paging\Pager.cs" />
+    <Compile Include="Paging\PagerOptions.cs" />
+    <Compile Include="Paging\PagerOptionsBuilder.cs" />
+    <Compile Include="Paging\PaginationModel.cs" />
+    <Compile Include="Paging\PagingExtensions.cs" />
+    <Compile Include="Paging\RouteValueDictionaryExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PurchaseOrderPusatDetailMode.cs" />
   </ItemGroup>
