--- a/Klinik.Web/packages.config
+++ b/Klinik.Web/packages.config
@@ -6,12 +6,16 @@
   <package id="bootstrap.less" version="3.3.5" targetFramework="net461" />
   <package id="Bootstrap.v3.Datetimepicker" version="4.17.45" targetFramework="net461" />
   <package id="Bootstrap.v3.Datetimepicker.CSS" version="4.17.45" targetFramework="net461" />
+  <package id="ClosedXML" version="0.94.2" targetFramework="net461" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net461" />
   <package id="Datalist" version="6.2.1" targetFramework="net461" />
   <package id="Datalist.Core" version="6.2.1" targetFramework="net461" />
+  <package id="DocumentFormat.OpenXml" version="2.7.2" targetFramework="net461" />
   <package id="DotNet.Highcharts" version="4.0" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
   <package id="EPPlus" version="4.5.3.2" targetFramework="net461" />
+  <package id="ExcelNumberFormat" version="1.0.3" targetFramework="net461" />
+  <package id="FastMember" version="1.3.0" targetFramework="net461" />
   <package id="FontAwesome" version="4.7.0" targetFramework="net461" />
   <package id="jQuery" version="3.0.0" targetFramework="net461" />
   <package id="jQuery.UI" version="1.12.1.1" targetFramework="net461" />
@@ -48,6 +52,8 @@
   <package id="Rotativa" version="1.7.3" targetFramework="net461" />
   <package id="Rotativa.Core" version="2.0.0" targetFramework="net461" />
   <package id="Rotativa.MVC" version="2.0.3" targetFramework="net461" />
+  <package id="System.IO.FileSystem.Primitives" version="4.0.1" targetFramework="net461" />
+  <package id="System.IO.Packaging" version="4.0.0" targetFramework="net461" />
   <package id="System.Linq.Dynamic" version="1.0.7" targetFramework="net461" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
