--- a/Klinik.Features/packages.config
+++ b/Klinik.Features/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="AutoMapper" version="8.0.0" targetFramework="net461" />
   <package id="Dapper" version="2.0.4" targetFramework="net461" />
+  <package id="DapperExtensions" version="1.6.3" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
   <package id="LinqKit" version="1.1.15" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net461" />
